--- a/README
+++ b/README
@@ -17,7 +17,6 @@ ghc -O -eventlog -rtsopts parlist.hs --make -threaded
 
 gnuplot
 
-# TODO: make it zoom out better; accurate, time-weighted mean left to do
 load "pool_size.plt"
 load "pool_size_max.plt"
 load "pool_size_min.plt"
@@ -30,10 +29,10 @@ load "pool_size_mean_out.plt"
 
 # TODO: make those zoom in (saw pattern) and zoom out (add increments) well
 # TODO: colour (<@dcoutts> eg black duds, green created and red overflows)
-# TODO: indicate somewhere than the area below the graph is the total
-# cumulated number of sparks created/disposed
-load "cr_local_speed.plt"
-load "di_local_speed.plt"
+# TODO: indicate somewhere than the area below the graph corresponds to
+# the total cumulated number of sparks created/disposed
+load "creation_velocity.plt"
+load "disposal_velocity.plt"
 
 # TODO: make >= 4 more plots:
 # two zoomed out local speeds, two or more zoomed in local speeds with
@@ -52,10 +51,23 @@ set output "png/pool_size.png"
 
 # deprecated plots:
 
-# too much vertical space taken
+# too much vertical space taken; too similar for different data (close to y=x)
 load "creation_cumulative.plt"
 load "disposal_cumulative.plt"
 
-# speed averaged over arbitrary, too big interval (from start to sample point)
+# Data is not continuous, so derivative does not exist,
+# so the difference quotient does not make sense and looks bad:
+# we have a saw pattern and the more samples, the more it is just
+# a sequence of separate peaks of equal height (binary signal: 0 and 1).
+# The area under the graph still corresponds to the number of spark
+# transitions, as required, but it's effectively via counting the peaks.
+# With uneven distribution of samples it's even worse, because the same
+# data in different parts of the graph looks very differently
+# (binary, horizontal signal vs. aggregated, vertical signal on the same graph).
+load "cr_local_speed.plt"
+load "di_local_speed.plt"
+
+# speed averaged over arbitrary, too big interval (from start to sample point);
+# the higher the time, the more smooth the curve
 load "creation_speed.plt"
 load "disposal_speed.plt"
