resurrect TODO to visualize median for poll size
I documented in 1e98c7b48f7f2df49f71d64bed793b4d806f1ad6
why median is no good, mostly for *_velocity.png, but then removed
it from TODO for the spark pool, too. These are different kinds of data
and the average (mean) in spark pool is currently not weighted,
so median should fit in, too. Still, we don't have evenly distributed
samples, so weighted mean might make more sense at some later point
and we may have to choose between accuracy (weighted mean)
and presentation (median). To be tested and discussed.

--- a/TODO
+++ b/TODO
@@ -12,6 +12,9 @@ make sure the interval is reasonable for usual data
 use something akin to EventTree and DurationTree to store aggregations
 and raw data at the bottom
 
+25%/50%/75% percentile for pool size, in gnuplot
+http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.10.6199
+figure 15
 
 
 Later:
