--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 Soon:
 
+improve the look of vertical scales and ticks and their code
+
 [GUI] mark vertical scale units in the trace pane:
 a long label might be "spark creation/conversion rate, unit spark/ms"
 or "fizzled sparks/millisecond" or "Spark creation rate (sparks/millisecond)"
@@ -124,6 +126,8 @@ the vertical blue line vanishes is some zoom levels
 sideways scrolling leaves artifacts (e.g., the thicker fragments of the flat line at the end of the Activity graph)
 
 sometimes 2 labels are written on top of each other even at max zoom, e.g. "thread 3 yielding" and "thread 3 is runnable"
+
+sometimes 2 tick labels (showing time) overlap
 
 may be a feature: filling graphs with colours is from line 1 upwards,
 not line 0, so lines at level 0 seem under the filled area, not level with it
